--- a/src/css/ScoreTable.css
+++ b/src/css/ScoreTable.css
@@ -15,3 +15,9 @@
   padding: 5px 0px;
   text-align: center;
 }
+
+@media only screen and (max-width: 400px) {
+  #scoreTable {
+    width: 80vw;
+  }
+}
