--- a/src/css/Setup.css
+++ b/src/css/Setup.css
@@ -15,3 +15,9 @@
 #submitButton:hover {
   cursor: pointer;
 }
+
+@media only screen and (max-width: 550px) {
+  #formContainer {
+    width: 80vw;
+  }
+}
